[package]
name = "ldap-types"
description = "Implements the basic LDAP types so they can be used in other crates"
readme = "README.md"
license = "MIT/Apache-2.0"
version = "0.2.2"
authors = ["Matthias Hörmann <mhoermann@gmail.com>"]
edition = "2021"
repository = "https://github.com/taladar/ldap-types"
keywords = [ "ldap", "schema", "filter" ]
categories = [ "data-structures", "parsing" ]
exclude = [ ".env", "tarpaulin-report.html", "tarpaulin-report.json" ]

[profile.release]
# do not strip debug info from release builds, useful for debugging those, cargo-flamegraph profiling or similar use cases
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["chumsky","serde","diff","ldap3"]
chumsky = ["dep:chumsky", "dep:ariadne", "dep:itertools"]
serde = ["dep:serde", "oid/serde_support"]
diff = ["dep:diff-struct"]
ldap3 = ["dep:ldap3"]

[dependencies]

[dependencies.diff-struct]
version = "0.4.1"
optional = true

[dependencies.ldap3]
version = "0.10.5"
optional = true

[dependencies.oid]
version = "0.2.1"

[dependencies.enum-as-inner]
version = "0.3.3"

[dependencies.is-macro]
version = "0.1.9"

[dependencies.chumsky]
version = "0.7.0"
optional = true

[dependencies.ariadne]
version = "0.1.5"
optional = true

[dependencies.itertools]
version = "0.10.1"
optional = true

[dependencies.hex]
version = "0.4.3"

[dependencies.lazy_static]
version = "1.4.0"

[dependencies.serde]
version = "1.0.136"
features = [ "derive" ]
optional = true

[dependencies.educe]
version = "0.4.19"
features = ["Hash","PartialEq","Eq"]
default-features = false

[dev-dependencies.pretty_assertions]
version = "~1.0"

[dev-dependencies.serde_json]
version = "1.0.59"
